:fire: Removendo codigo
