# api-temperatura/docs/swagger.json
@@ -6,6 +6,11 @@
     "paths": {
         "/home": {
             "get": {
+                "security": [
+                    {
+                        "apikey //Defina a autenticao necessaria para essa rota": []
+                    }
+                ],
                 "description": "Retorna uma mensagem de boas-vindas da API Temperatura",
                 "produces": [
                     "application/json"
@@ -69,6 +74,67 @@
                     },
                     "500": {
                         "description": "Erro interno do servidor: Erro ao gerar o token",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/temperatura": {
+            "get": {
+                "description": "Retorna a lista de temperatura cadastradas",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Temperatura"
+                ],
+                "summary": "Consulta a temperatura",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Temperatura"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Cadastra uma nova temperatura",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Temperatura"
+                ],
+                "summary": "Cadastra uma nova temperatura",
+                "parameters": [
+                    {
+                        "description": "Cadatro de uma nova temperatura",
+                        "name": "temperatura",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Temperatura"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Temperatura"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "type": "string"
                         }
@@ -145,10 +211,15 @@
                 "email": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
-                },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Temperatura": {
+            "type": "object",
+            "properties": {
+                "temperatura": {
                     "type": "string"
                 }
             }
@@ -158,9 +229,6 @@
             "properties": {
                 "email": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
